--- a/.env
+++ b/.env
@@ -1,8 +1,7 @@
 [logging]
 # error или debug
-level = debug
+level = error
 
 [parsing]
 # xlsx или json
 out_format = xlsx
-tesseract_location ='C:\Program Files\Tesseract-OCR\tesseract.exe'
