--- a/requirements.txt
+++ b/requirements.txt
@@ -7,8 +7,4 @@ tqdm==4.63.0
 typer==0.4.1
 openpyxl
 xlrd==2.0.1
-camelot-py
-camelot-py[cv]
-camelot-py[all]
-pytesseract==0.3.9
-pdf2image==1.16.0
+pdfplumber==0.6.0
